--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <form>
               <input
                 type="text"
-                placeholder="Search Location"
+                placeholder="Location"
                 class="input_field"
               />
               <button type="submit" class="btn_search">Search</button>
